# backend/src/main/java/com/example/backend/controllers/UserController.java
@@ -3,16 +3,15 @@ package com.example.backend.controllers;
 import com.example.backend.dto.BaseResponse;
 import com.example.backend.entities.User;
 import com.example.backend.repositories.UserRepository;
-
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.RequiredArgsConstructor;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("/api/users")
@@ -22,9 +21,10 @@ public class UserController {
     private final UserRepository userRepository;
 
     @Operation(summary = "Get all users", description = "Fetch a list of all registered users.")
-    @GetMapping("/users")
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
+    @GetMapping("/")
+    public BaseResponse<Page<User>> getAllUsers(@RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int pageSize) {
+        return new BaseResponse<>(userRepository.findAll(PageRequest.of(page, pageSize)), "Success!");
     }
 
     @Operation(summary = "Current user", description = "Get current user by client token.")
@@ -40,14 +40,6 @@ public class UserController {
     public User getUserById(@PathVariable Long id) {
         return userRepository.findById(id).orElseThrow(() -> new RuntimeException("User not found"));
     }
-
-    // @Operation(summary = "Create a new user", description = "Register a new user
-    // with a username and password.")
-    // @PostMapping
-    // public User createUser(@RequestBody User user) {
-    // user.setRole(Role.EMPLOYEE); // Default role
-    // return userRepository.save(user);
-    // }
 
     @Operation(summary = "Delete a user", description = "Delete a user by their ID.")
     @DeleteMapping("/{id}")
